# voice_prompt

./: .gitignore  Cargo.toml  README.md  USAGE.md  com.voice-prompt.agent.plist  install.sh  setup.sh  uninstall.sh  voice-prompt.desktop  voice-prompt.service
Formula/: voice-prompt.rb
src/: audio_feedback.rs  clipboard.rs  config.rs  main.rs  recorder.rs  refiner.rs  stats.rs  transcriber.rs
src/app/: event_handler.rs  mod.rs  model.rs  pipeline.rs  recording.rs  state.rs
src/hotkey/: linux.rs  macos.rs
src/ui/: dashboard.rs  history.rs  hotkey_dialog.rs  mod.rs  overlay.rs
