[package]
name = "voice-prompt"
version = "0.1.0"
edition = "2021"
description = "Voice-to-prompt: record speech, transcribe locally, refine via Gemini, copy to clipboard"
license = "MIT"
repository = "https://github.com/tr4m0ryp/voice-prompt"
readme = "README.md"
keywords = ["voice", "speech-to-text", "whisper", "clipboard", "wayland"]
categories = ["command-line-utilities", "accessibility"]

[[bin]]
name = "voice-prompt"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.10", features = ["v4_12"] }
libadwaita = { version = "0.8", features = ["v1_2", "v1_4", "v1_5"] }
async-channel = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
cpal = "0.17"
hound = "3.5"
whisper-rs = "0.15"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"
gtk4-layer-shell = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
rdev = "0.5"
